# LogSystem

./: CMakeLists.txt
bench/: bench.cc
example/: test.cc
include/: buffer.hpp  formatter.hpp  level.hpp  logSys.h  logger.hpp  looper.hpp  message.hpp  sink.hpp  util.hpp
practice/: args  args.cpp  builder  builder.cpp  factory  factory.cpp  proxy  proxy.cpp  singleton  singleton.cpp
test/: main.cpp
